Session 4 iteration 3
Signed-off-by: Branislav Malo <branislavmalo@gmail.com>